--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <link rel="stylesheet" href="part2.css" >
+  <link rel="stylesheet" href="stylesheet.css" >
 
 
   <link rel="stylesheet" href="https://fontawesome.com/icons/laugh-wink?style=duotone">
